dark mode viewer fixes

--- a/src/Analyse/Analyser.css
+++ b/src/Analyse/Analyser.css
@@ -12,15 +12,13 @@
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: var(--secondary-color-accent);
-  border-top: #ddd 2px solid;
+  background-color: var(--primary-color-accent);
 
   .timeline {
     position: absolute;
     bottom: 0;
     left: 64px;
     width: calc(100% - 64px);
-    border-left: #ddd 2px solid;
   }
 
   .play-pause-button {
