--- a/src/Components/Panner/Panner.css
+++ b/src/Components/Panner/Panner.css
@@ -32,7 +32,7 @@
     opacity: 1;
   }
 
-  background-color: var(--primary-color-accent);
+  background-color: #f8f8f8;
   border-radius: 5px;
 
   div {
